--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,11 @@ project(Complexity VERSION 0.1 HOMEPAGE_URL "https://github.com/MaximKolpashchik
 include(CTest)
 add_executable(main main.c mtx.c)
 add_test(NAME "Memory test" COMMAND valgrind --leak-check=full --error-exitcode=1 ./main)
+add_test(NAME "Size 1000 classic"  COMMAND ./main 1000 10 0 2 0)
+add_test(NAME "Size 1000 strassen" COMMAND ./main 1000 10 0 2 1)
+add_test(NAME "Size 1500 classic"  COMMAND ./main 1500 10 0 2 0)
+add_test(NAME "Size 1500 strassen" COMMAND ./main 1500 10 0 2 1)
+add_test(NAME "Size 2000 classic"  COMMAND ./main 2000 10 0 2 0)
+add_test(NAME "Size 2000 strassen" COMMAND ./main 2000 10 0 2 1)
+add_test(NAME "Size 2048 classic"  COMMAND ./main 2048 10 0 2 0)
+add_test(NAME "Size 2048 strassen" COMMAND ./main 2048 10 0 2 1)
