Добавить исправление аномалии и замер времени

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
             ],
             "group": "build",
             "problemMatcher": [],
-            "detail": "CMake template build task"
+            "detail": "Build main"
         }
     ]
 }
