--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,9 @@ include(CTest)
 add_compile_options(-Wall -Wextra -Werror -O0)
 add_executable(main main.c mtx.c)
 add_test(NAME "Memory test" COMMAND valgrind --leak-check=full --error-exitcode=1 ./main)
-add_test(NAME "Size 1000 classic"  COMMAND ./main 1000 10 0 0)
-add_test(NAME "Size 1000 strassen" COMMAND ./main 1000 10 0 1)
-add_test(NAME "Size 1500 classic"  COMMAND ./main 1500 10 0 0)
-add_test(NAME "Size 1500 strassen" COMMAND ./main 1500 10 0 1)
-add_test(NAME "Size 2000 classic"  COMMAND ./main 2000 10 0 0)
-add_test(NAME "Size 2000 strassen" COMMAND ./main 2000 10 0 1)
-add_test(NAME "Size 2048 classic"  COMMAND ./main 2048 10 0 0)
-add_test(NAME "Size 2048 strassen" COMMAND ./main 2048 10 0 1)
+add_test(NAME "Size 8"      COMMAND ./main -s 8)
+add_test(NAME "Size 1023"   COMMAND ./main -s 1023 -q)
+add_test(NAME "Size 1024"   COMMAND ./main -s 1024 -q)
+add_test(NAME "Size 1025"   COMMAND ./main -s 1025 -q)
+add_test(NAME "Size 2048"   COMMAND ./main -s 2048 -q)
+add_test(NAME "Size 4096"   COMMAND ./main -s 4096 -q)
