Добавить чтение данных из файла и с клавиатуры

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
-project(Complexity VERSION 0.1 HOMEPAGE_URL "https://github.com/MaximKolpashchikov/complexity" LANGUAGES C)
+project(Complexity VERSION 0.3 HOMEPAGE_URL "https://github.com/MaximKolpashchikov/complexity" LANGUAGES C)
 include(CTest)
 add_compile_options(-Wall -Wextra -Werror -O0)
 add_executable(main main.c mtx.c)
-add_test(NAME "Memory test" COMMAND valgrind --leak-check=full --error-exitcode=1 ./main)
-add_test(NAME "Size 8"      COMMAND ./main -s 8)
-add_test(NAME "Size 1023"   COMMAND ./main -s 1023 -q)
-add_test(NAME "Size 1024"   COMMAND ./main -s 1024 -q)
-add_test(NAME "Size 1025"   COMMAND ./main -s 1025 -q)
-add_test(NAME "Size 2048"   COMMAND ./main -s 2048 -q)
-add_test(NAME "Size 4096"   COMMAND ./main -s 4096 -q)
+add_test(NAME "Memory test" COMMAND valgrind --leak-check=full --error-exitcode=1 ./main -g)
+add_test(NAME "Size 8"      COMMAND ./main -g -s 8)
+add_test(NAME "Size 1023"   COMMAND ./main -g -s 1023 -q)
+add_test(NAME "Size 1024"   COMMAND ./main -g -s 1024 -q)
+add_test(NAME "Size 1025"   COMMAND ./main -g -s 1025 -q)
+add_test(NAME "Size 2048"   COMMAND ./main -g -s 2048 -q)
