--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,9 +4,9 @@ name: CMake build for Linux and Windows
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "test" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "test" ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
